🎈 perf:  perfe components about

--- a/src/web/vue/learn/components/认识组件化开发.md
+++ b/src/web/vue/learn/components/认识组件化开发.md
@@ -218,3 +218,76 @@ export default {
 + 如果我们想要使用这一 componentA.vue 文件，比较常见的是两种方式： 
   + 方式一：使用Vue CLI来创建项目，项目会默认帮助我们配置好所有的配置选项，可以在其中直接使用.vue文件；
   + 方式二：自己使用webpack或rollup或 vite 这类打包工具，对其进行打包处理；
+
+  
+## 组件实例
+
+### `$refs`
+
+> https://cn.vuejs.org/api/component-instance.html#refs
+
+- 某些情况下，我们在组件中想要直接获取到元素对象或者子组件实例：
+  - 在Vue开发中我们是不推荐进行DOM操作的；
+  - 这个时候，我们可以给元素或者组件绑定一个ref的attribute属性；
+  - 在Vue 3中，$refs属性用于访问父组件中的子组件或DOM元素。它允许您以编程方式直接引用和操作这些组件或元素。
+
+```vue
+<template>
+  <div>
+    <child-component ref="childRef"></child-component>
+    <button @click="logChildRef">Log Child Ref</button>
+  </div>
+</template>
+
+<script>
+import ChildComponent from './ChildComponent.vue';
+
+export default {
+  components: {
+    ChildComponent
+  },
+  methods: {
+    logChildRef() {
+      console.log(this.$refs.childRef);
+    }
+  }
+}
+</script>
+```
+
+在上面的示例中，我们通过使用ref属性给子组件命名为`childRef`，然后可以通过`this.$refs.childRef`来访问和操作子组件。在点击"Log Child Ref"按钮时，会将子组件实例打印到控制台。
+
+###` $parent, $root`
+
+> https://cn.vuejs.org/api/component-instance.html#parent
+
+在Vue中，`$parent`和`$root`都是用于访问组件层级关系的特殊属性。
+
++ `$parent`属性用于访问当前组件的父组件实例。通过`this.$parent`可以访问父组件的属性和方法。
++ `$root`属性用于访问根组件实例。根组件是Vue应用的最顶层组件，通过`this.$root`可以访问根组件的属性和方法。
+
+这些属性在处理组件之间的通信或访问全局状态时非常有用。
+
+```vue
+<template>
+  <div>
+    <child-component></child-component>
+  </div>
+</template>
+
+<script>
+import ChildComponent from './ChildComponent.vue';
+
+export default {
+  components: {
+    ChildComponent
+  },
+  mounted() {
+    console.log(this.$parent); // 访问父组件实例
+    console.log(this.$root); // 访问根组件实例
+  }
+}
+</script>
+```
+
+在上面的示例中，父组件中通过使用`$parent`属性访问了父组件实例，使用​`$root`属性访问了根组件实例，并将它们打印到控制台。
