--- a/src/web/vue/learn/components/认识组件化开发.md
+++ b/src/web/vue/learn/components/认识组件化开发.md
@@ -291,3 +291,155 @@ export default {
 ```
 
 在上面的示例中，父组件中通过使用`$parent`属性访问了父组件实例，使用​`$root`属性访问了根组件实例，并将它们打印到控制台。
+
+## 组件的 v-model
+
+> https://cn.vuejs.org/guide/components/v-model.html#component-v-model
+
+`v-model` 可以在组件上使用以实现双向绑定。
+
+首先让我们回忆一下 `v-model` 在原生元素上的用法：
+
+```vue
+<input v-model="searchText" />
+```
+
+在代码背后，模板编译器会对 `v-model` 进行更冗长的等价展开。因此上面的代码其实等价于下面这段：
+
+```vue
+<input
+  :value="searchText"
+  @input="searchText = $event.target.value"
+/>
+```
+
+而当使用在一个组件上时，`v-model` 会被展开为如下的形式：
+
+```vue
+<CustomInput
+  :model-value="searchText"
+  @update:model-value="newValue => searchText = newValue"
+/>
+```
+
+要让这个例子实际工作起来，`<CustomInput>` 组件内部需要做两件事：
+
+1. 将内部原生 `<input>` 元素的 `value` attribute 绑定到 `modelValue` prop
+2. 当原生的 `input` 事件触发时，触发一个携带了新值的 `update:modelValue` 自定义事件
+
+```vue
+<!-- CustomInput.vue -->
+<script>
+export default {
+  props: ['modelValue'],
+  emits: ['update:modelValue']
+}
+</script>
+
+<template>
+  <input
+    :value="modelValue"
+    @input="$emit('update:modelValue', $event.target.value)"
+  />
+</template>
+```
+
+现在 `v-model` 可以在这个组件上正常工作了：
+
+```vue
+<CustomInput v-model="searchText" />
+```
+
+另一种在组件内实现 `v-model` 的方式是使用一个可写的，同时具有 getter 和 setter 的 `computed` 属性。`get` 方法需返回 `modelValue` prop，而 `set` 方法需触发相应的事件：
+
+```vue
+<!-- CustomInput.vue -->
+<script>
+export default {
+  props: ['modelValue'],
+  emits: ['update:modelValue'],
+  computed: {
+    value: {
+      get() {
+        return this.modelValue
+      },
+      set(value) {
+        this.$emit('update:modelValue', value)
+      }
+    }
+  }
+}
+</script>
+
+<template>
+  <input v-model="value" />
+</template>
+```
+
+### 多个 `v-model` 绑定
+
+利用刚才在 [`v-model` 参数](https://cn.vuejs.org/guide/components/v-model.html#v-model-arguments)小节中学到的指定参数与事件名的技巧，我们可以在单个组件实例上创建多个 `v-model` 双向绑定。
+
+组件上的每一个 `v-model` 都会同步不同的 prop，而无需额外的选项：
+
+```vue
+<UserName
+  v-model:first-name="first"
+  v-model:last-name="last"
+/>
+```
+
+```vue
+<script>
+export default {
+  props: {
+    firstName: String,
+    lastName: String
+  },
+  emits: ['update:firstName', 'update:lastName']
+}
+</script>
+
+<template>
+  <input
+    type="text"
+    :value="firstName"
+    @input="$emit('update:firstName', $event.target.value)"
+  />
+  <input
+    type="text"
+    :value="lastName"
+    @input="$emit('update:lastName', $event.target.value)"
+  />
+</template>
+```
+
+```vue
+<script>
+  export default {
+    props: {
+      modelValue: String,
+      title: String 
+    },
+    emits: ["update:modelValue", "update:title"],
+    computed: {
+      value: {
+        set(value) {
+          this.$emit("update:modelValue", value);
+        },
+        get() {
+          return this.modelValue;
+        }
+      },
+      why: {
+        set(why) {
+          this.$emit("update:title", why);
+        },
+        get() {
+          return this.title;
+        }
+      }
+    }
+  }
+</script>
+```
