🎈 perf: optimize file router

--- a/src/web/vue/learn/router/路由使用.md
+++ b/src/web/vue/learn/router/路由使用.md
@@ -711,3 +711,30 @@ const routes = [
 ```
 
 总结: 强制重定向后, 还会重新来数组里匹配一次规则
+
+## 别名
+
+有时候，同一个路径可能需要多个路由，此时可以使用 `alias` 创建别名。
+
+```javascript
+const routes = [
+  { path: '/foo', component: Foo, alias: '/bar' },
+]
+```
+
+> 有个通用的场景是，你可能要把 `src` 目录下的 `@` 指向 `src` 目录，这时候就可以使用别名：
+
+在 `vue.config.js` 中配置别名
+
+```javascript
+module.exports = {
+  configureWebpack: {
+    resolve: {
+      alias: {
+        '@': path.resolve(__dirname, 'src')
+      }
+    }
+  }
+}
+```
+
