📃 docs:  add something about 小程序框架

--- a/src/web/weChat/小程序框架.md
+++ b/src/web/weChat/小程序框架.md
@@ -439,6 +439,28 @@ module.exports.getMax = getMax;
 
 这样的表达式目前暂不支持。
 
+> 关于微信小程序警告“Do not have handler in component: pages/xxx/xxx. “的解决方法
+
+通过资料查询和微信开发者社区询问，原因是没有绑定bindinput方法，因此我们可以为表单绑定一个空的方法，来解决这个警告
+
+```html
+<input model:value="{{name}}" bindinput="textCallback"/>
+
+<!-- js -->
+Page({
+	data: helloData,
+	changeName: function (e) {
+		// sent data change to view
+		console.log(this.data)
+		this.data.name = this.data.name === 'Weixin' ? 'xxx' : 'Weixin'
+		this.setData({
+			name: this.data.name
+		})
+	},
+	textCallback: function () {}
+})
+```
+
 #### 在自定义组件中传递双向绑定
 
 双向绑定同样可以使用在自定义组件上。如下的自定义组件：
