✨ feat: add harmony 状态数据管理

--- a/src/web/harmony/状态管理.md
+++ b/src/web/harmony/状态管理.md
@@ -252,3 +252,159 @@ struct Second {
 ```
 
 ![](https://qiniu.waite.wang/202404220020396.png)
+
+### @Prop/ @Link 装饰器
+
+> @Prop 父子组件单向同步: @Prop装饰的变量可以和父组件建立单向的同步关系。@Prop装饰的变量是可变的，但是变化不会同步回其父组件。
+> @Link 父子组件双向同步: 子组件中被@Link装饰的变量与其父组件中对应的数据源建立双向数据绑定。@Link装饰的变量与其父组件中的数据源共享相同的值。
+
+
+![](https://qiniu.waite.wang/202404241715871.png)
+
+> 在最新版本中, @Prop 可以在子组件初始化, 但是编辑器 eslint 会报错
+
+
+```ts
+@Component
+struct Child {
+  @Prop value: number;
+
+  build() {
+    Text(`${this.value}`)
+      .fontSize(50)
+      .onClick(() => {
+        console.log(`${this.value}`)
+        this.value++
+      })
+  }
+}
+
+@Entry
+@Component
+struct Index {
+  @State arr: number[] = [1, 2, 3];
+
+  build() {
+    Row() {
+      Column() {
+        Child({ value: this.arr[0] })
+        Child({ value: this.arr[1] })
+        Child({ value: this.arr[2] })
+
+        Divider().height(5)
+
+        ForEach(this.arr,
+          item => {
+            Child({ 'value': item } as Record<string, number>)
+          },
+          item => item.toString()
+        )
+        Text('replace entire arr')
+          .fontSize(50)
+          .onClick(() => {
+            // 两个数组都包含项“3”。
+            this.arr = this.arr[0] == 1 ? [3, 4, 5] : [1, 2, 3];
+          })
+      }
+    }
+  }
+}
+```
+
+如果点击界面上的“1”六次、“2”五次、“3”四次，将所有变量的本地取值都变为“7”。
+
+```
+7
+7
+7
+----
+7
+7
+7
+```
+单击replace entire arr后，屏幕将显示以下信息，为什么？
+
+```
+3
+4
+5
+----
+7
+4
+5
+```
+
++ 在子组件Child中做的所有的修改都不会同步回父组件Index组件，所以即使6个组件显示都为7，但在父组件Index中，this.arr保存的值依旧是[1,2,3]。
++ 点击replace entire arr，this.arr[0] == 1成立，将this.arr赋值为[3, 4, 5]；
++ 因为this.arr[0]已更改，Child({value: this.arr[0]})组件将this.arr[0]更新同步到实例@Prop装饰的变量。Child({value: this.arr[1]})和Child({value: this.arr[2]})的情况也类似。
++ this.arr的更改触发ForEach更新，this.arr更新的前后都有数值为3的数组项：[3, 4, 5] 和[1, 2, 3]。根据diff算法，数组项“3”将被保留，删除“1”和“2”的数组项，添加为“4”和“5”的数组项。这就意味着，数组项“3”的组件不会重新生成，而是将其移动到第一位。所以“3”对应的组件不会更新，此时“3”对应的组件数值为“7”，ForEach最终的渲染结果是“7”，“4”，“5”。
+
+> diff算法是一种用于比较两个数据结构（比如两个数组或两个树）之间差异的算法。在前端开发中，diff算法通常用于虚拟DOM的更新和渲染优化。
+> 
+> 在React等前端框架中，当数据发生变化时，diff算法可以帮助确定哪些DOM节点需要被更新，哪些需要被添加或删除，以及哪些可以被保留而不进行重新渲染。这可以提高性能并减少不必要的DOM操作。
+> 
+> diff算法通常包括以下步骤：
+> 
+> + 比较两个数据结构的差异，找出新增、删除和更新的部分。
+> + 标记需要进行更新的部分，并记录其变化。
+> + 应用这些变化，更新DOM或其他视图。
+
+```ts
+@Styles function btn() {
+  .margin(12)
+  .width(312)
+  .height(40)
+}
+
+
+@Component
+struct Child {
+  @Link items: number[];
+
+  build() {
+    Column() {
+      Button(`Button1: push`)
+        .btn()
+        .onClick(() => {
+          this.items.push(this.items.length + 1);
+        })
+      Button(`Button2: replace whole item`)
+        .btn()
+        .onClick(() => {
+          this.items = [100, 200, 300];
+        })
+    }
+  }
+}
+
+@Entry
+@Component
+struct Parent {
+  @State arr: number[] = [1, 2, 3];
+
+  build() {
+    Column() {
+      Button('Button Parent push')
+        .btn()
+        .onClick(() => {
+          this.arr.push(this.arr.length + 1);
+        })
+      Child({ items: $arr })
+        .margin(12)
+      ForEach(this.arr,
+        (item: number) => {
+          Button(`${item}`)
+            .margin(12)
+            .width(312)
+            .height(40)
+            .backgroundColor('#11a2a2a2')
+            .fontColor('#e6000000')
+        },
+        (item: ForEachInterface) => item.toString()
+      )
+    }
+  }
+}
+```
+
+![](https://qiniu.waite.wang/202404241724695.png)
