✨ feat: add 页面路由 harmony

--- a/src/web/harmony/状态管理.md
+++ b/src/web/harmony/状态管理.md
@@ -408,3 +408,226 @@ struct Parent {
 ```
 
 ![](https://qiniu.waite.wang/202404241724695.png)
+
+
+### @Observed装饰器和@ObjectLink装饰器：嵌套类对象属性变化
+
+> 上文所述的装饰器仅能观察到第一层的变化，但是在实际应用开发中，应用会根据开发需要，封装自己的数据模型。对于多层嵌套的情况，比如二维数组，或者数组项class，或者class的属性是class，他们的第二层的属性变化是无法观察到的。这就引出了@Observed/@ObjectLink装饰器。
+
+以下是引入@Observed/@ObjectLink装饰器的示例：
+
+```ts
+@Observed
+class Person {
+  name: string
+  age: number
+  gf: Person
+
+  constructor(name: string, age: number, gf?: Person) {
+    this.name = name
+    this.age = age
+    this.gf = gf
+  }
+}
+
+@Entry
+@Component
+struct Child {
+  @State p: Person = new Person("Waite", 18, new Person("www", 11))
+  @State gfs: Person[] = [
+    new Person("Jack", 18),
+    new Person("XiaoMing", 20)
+  ]
+
+  build() {
+    Column({ space: 10 }) {
+      PersonChild({ p: this.p.gf })
+        .onClick(() => {
+          console.log(`${this.p.gf.age}`)
+          this.p.gf.age++
+        })
+
+      Text("Girl Friends List")
+
+      ForEach(
+        this.gfs,
+        item => {
+          PersonChild({ p: item })
+            .onClick(() => item.age++)
+        }
+      )
+    }
+  }
+}
+
+@Component
+struct PersonChild {
+  @ObjectLink p: Person
+
+  build() {
+    Column() {
+      Text(`${this.p.name}: ${this.p.age}`)
+    }
+  }
+}
+```
+
+> 为了给变量加 @ObjectLink 装饰器, 写成组件 -> 因为装饰器没法装饰一个参数
+>
+> @Observed class 不管嵌套几个类型, 凡是嵌套的, 都要加上 @Observed 装饰器
+
+> 完善案例, 当 Checkbox 选中时, 会触发对应的任务完成状态, 任务完成状态改变时, 会触发任务进度的更新
+
+```ts
+@Observed
+class Task {
+  static id: number = 1
+  name: string = `Task${Task.id++}`
+  finished: boolean = false
+}
+
+@Styles function card() {
+  .width("95%")
+  .padding(20)
+  .backgroundColor(Color.White)
+  .borderRadius(15)
+  .shadow(
+    {
+      radius: 6,
+      color: "#1F000000",
+      offsetX: 2,
+      offsetY: 4
+    }
+  )
+}
+
+@Extend(Text) function finishedTask() {
+  .fontColor("#B1B2B1")
+}
+
+@Entry
+@Component
+struct Second {
+  @State totalTask: number = 0
+  @State finishTask: number = 0
+  @State task: Task[] = []
+
+  handTaskChange() {
+    this.totalTask = this.task.length
+    this.finishTask = this.task.filter(item => item.finished).length
+  }
+
+  build() {
+    Column({ space: 10 }) {
+      // 任务进度卡片
+      TaskStatistics({ finishTask: this.finishTask, totalTask: this.totalTask })
+
+      // 新增任务按钮
+      Button("添加任务")
+        .width(200)
+        .onClick(() => {
+          this.task.push(new Task())
+          this.handTaskChange()
+        })
+
+      // 渲染任务列表
+      List({ space: 10 }) {
+        ForEach(
+          this.task,
+          (item: Task, index) => {
+            ListItem() {
+              itemChild({item: item, onTaskChanged: () => this.handTaskChange()})
+            }
+            .swipeAction({
+              end: this.DeleteButton(index)
+            })
+          }
+        )
+      }
+      .width("100%")
+      .height(0)
+      .alignListItem(ListItemAlign.Center)
+      .layoutWeight(1)
+    }
+    .width("100%")
+    .height("100%")
+    .backgroundColor("#F1F2F3")
+  }
+
+  // 构建函数
+  @Builder DeleteButton(index: number) {
+    Text("Del")
+      .fontColor(Color.White)
+      .padding(20)
+      .backgroundColor(Color.Red)
+      .borderRadius("50%")
+      .margin(5)
+      .onClick(() => {
+        this.task.splice(index, 1)
+        this.handTaskChange()
+      })
+  }
+}
+
+@Component
+struct TaskStatistics {
+  @Prop finishTask: number
+  @Prop totalTask: number
+
+  build() {
+    Row() {
+      Text("任务进度: ")
+        .fontSize(30)
+        .fontWeight(FontWeight.Bold)
+
+      Stack() {
+        Progress({
+          value: this.finishTask,
+          total: this.totalTask,
+          type: ProgressType.Ring
+        })
+          .width(100)
+
+        Row() {
+          Text(this.finishTask.toString())
+            .fontSize(24)
+            .fontColor("#36D")
+          Text("/" + this.totalTask.toString())
+            .fontSize(24)
+        }
+      }
+    }
+    .card()
+    .margin({ top: 20, bottom: 10 })
+    .justifyContent(FlexAlign.SpaceEvenly)
+  }
+}
+
+@Component
+struct itemChild {
+  @ObjectLink item: Task
+  onTaskChanged: () => void
+
+  build(){
+    Row() {
+      if (this.item.finished) {
+        Text(this.item.name)
+          .finishedTask()
+      }
+      else {
+        Text(this.item.name)
+      }
+
+
+      Checkbox()
+        .select(this.item.finished)
+        .onChange(value => {
+          this.item.finished = value
+          this.onTaskChanged()
+        })
+    }
+    .card()
+    .justifyContent(FlexAlign.SpaceBetween)
+  }
+}
+```
