✨ feat: finish 网络连接

--- a/src/web/harmony/网络连接.md
+++ b/src/web/harmony/网络连接.md
@@ -350,3 +350,71 @@ function ellipsisTextOverFlow(line: number = 1){
 ```
 
 ## 第三方库 axios
+
+![image-20240429151445521](https://qiniu.waite.wang/202404291514779.png)
+
+https://developer.huawei.com/consumer/cn/doc/harmonyos-guides-V2/ide-command-line-ohpm-0000001490235312-V2
+
+OHPM CLI 作为鸿蒙生态三方库的包管理工具，支持OpenHarmony共享包的发布、安装和依赖管理。
+
+1. 下载ohpm工具包，[点击链接获取](https://developer.harmonyos.com/cn/develop/deveco-studio#download_cli)。
+
+2. 解压文件，进入“ohpm/bin”目录，打开命令行工具，执行如下指令`init.bat`初始化ohpm
+
+3. 将ohpm配置到环境变量中。
+
+   - Windows环境变量设置方法：
+
+     在**此电脑 > 属性 > 高级系统设置 > 高级 > 环境变量**中，将ohpm命令行工具的bin目录配置到系统或者用户的PATH变量中。
+
+4. 安装完成之后，执行`ohpm -v` 输出版本号即为安装成功
+
+> 配置完环境变量后可能需要重启电脑才能生效
+
+![image-20240429151700246](https://qiniu.waite.wang/202404291517899.png)
+
+**OpenHarmony三方库中心仓**: https://ohpm.openharmony.cn/#/cn/home
+
+> 以下为 使用案例
+
+```tsx
+// import http from '@ohos.net.http'
+import axios from '@ohos/axios'
+import ShopInfo from '../viewmodel/ShopInfo'
+
+class ShopModel {
+  pageNo: number = 1
+  url: string = `http://127.0.0.1:3000/`
+
+  getShopList(): Promise<ShopInfo[]> {
+    return new Promise(
+      (resolve, reject) => {
+        axios.get(
+          this.url + `shops?pageNo=${this.pageNo}&pageSize=4`,
+        )
+          .then((res) => {
+            if (res.status === 200) {
+              // 请求成功
+              console.log("Success")
+              resolve(res.data)
+            }
+            else {
+              console.log("Error", JSON.stringify(res))
+              reject("Error")
+            }
+          })
+          .catch((err: Error) => {
+            // 请求失败
+            console.log("Error", JSON.stringify(err))
+            reject("Error")
+          })
+      }
+    )
+  }
+}
+
+const shopModel = new ShopModel()
+
+export default shopModel as ShopModel
+```
+
