✨ feat: add django posts

--- a/src/backend/Django/安装.md
+++ b/src/backend/Django/安装.md
@@ -1,5 +1,5 @@
 ---
-title: Django 安装
+title: 初识 Django
 icon: post
 order: 1
 date: 2024-05-30
@@ -162,3 +162,39 @@ urlpatterns = [
 ![img](https://qiniu.waite.wang/202405302028324.jpeg)
 
 **注意：**项目中如果代码有改动，服务器会自动监测代码的改动并自动重新载入，所以如果你已经启动了服务器则不需手动重启。
+
+## 创建app
+
+```
+- 项目
+	- app，用户管理【表结构、函数、HTML模板、CSS】
+	- app，订单管理【表结构、函数、HTML模板、CSS】
+	- app，后台管理【表结构、函数、HTML模板、CSS】
+	- app，网站   【表结构、函数、HTML模板、CSS】
+	- app，API    【表结构、函数、HTML模板、CSS】
+	..
+	
+注意：我们开发比较简洁，用不到多app，一般情况下，项目下创建1个app即可。
+```
+
+![image-20240601153948318](https://qiniu.waite.wang/202406011539511.png)
+
+```
+├── app01
+│   ├── __init__.py
+│   ├── admin.py         【固定，不用动】django默认提供了admin后台管理。
+│   ├── apps.py          【固定，不用动】app启动类
+│   ├── migrations       【固定，不用动】数据库变更记录
+│   │   └── __init__.py
+│   ├── models.py        【**重要**】，对数据库操作。
+│   ├── tests.py         【固定，不用动】单元测试
+│   └── views.py         【**重要**】，函数。
+├── manage.py
+└── mysite2
+    ├── __init__.py
+    ├── asgi.py
+    ├── settings.py
+    ├── urls.py          【URL->函数】
+    └── wsgi.py
+```
+
