✨ feat: update django db

--- a/src/backend/Django/模板.md
+++ b/src/backend/Django/模板.md
@@ -335,3 +335,38 @@ def runoob(request):
 - forloop.revcounter0: 倒序获取循环序号，结尾序号为 0
 - forloop.first（一般配合if标签使用）: 第一条数据返回 True，其他数据返回 False
 - forloop.last（一般配合if标签使用）: 最后一条数据返回 True，其他数据返回 False
+
+## 模块化
+
+![image-20240605150947706](https://qiniu.waite.wang/202406051509154.png)
+
+调整 `djangoProject/urls.py`
+
+```python
+from django.urls import path, include
+
+from app import views
+
+# from . import views
+
+urlpatterns = [
+  path('book/', include("app.urls")),
+]
+```
+
+`app/urls.py`
+
+```python
+from django.urls import path
+from app import views
+
+urlpatterns = [
+  path("home", views.home, name="home"),
+  path("add", views.add_book, name="add_book"),
+  path("query", views.query_book, name="query_book"),
+  path("delete", views.delete_book, name="delete_book"),
+  path("update", views.update_book, name="update_book"),
+]
+```
+
+![image-20240605151102668](https://qiniu.waite.wang/202406051511917.png)
